--- a/misc/manual-cap-05.tex
+++ b/misc/manual-cap-05.tex
@@ -1,215 +1,152 @@
-\section{\numb section 5. \special{ps: gsave 0.6 setgray}Quotient manifolds\special{ps: grestore}}
-
-{\bf The code described in this section does not work yet.
-It should be regarded as a mere declaration of intentions.}
-\medskip
-
-The roots of {\maniFEM} go back to a PhD thesis in 2002
-% (or even earlier, to a Master thesis in 1997)
-where finite elements on a torus were implemented in {\codett FORTRAN}.%
-\footnote *{\parbox{\ftntfont\baselineskip=3pt
-See % C.~Barbarosie, Optimization of perforated domains through homogenization,
-% Structural Optimization 14, 1997
-C.~Barbarosie, Shape optimization of periodic structures,
-Computers \& Structures 30, 2003}}
-The torus is meant as a mere quotient manifold between $ \RR^2 $ and a group of
-translations of $ \RR^2 $ with two generators; you may think of it as $ \RR^2/\ZZ^2 $.
-It should be stressed that this manifold is not the usual ``donut'' built in paragraph
-\numb section 2.\numb parag 15.
-The quotient torus is a Riemann manifold with no curvature; it is locally Euclidian
-(that is, locally isometric to open sets of $ \RR^2 $); we may call it ``flat torus''.
-It cannot be embedded in $ \RR^3 $, much less be represented graphically.
-An unfolded mesh in $ \RR^2 $ can be represented graphically, where vertices and segments
-from the torus are drawn more than once.
-
-One of the goals of {\maniFEM} is to deal with meshes on quotient manifolds.
-Different quotient operations can be used, with groups of translations of $ \RR^2 $ but also
-with other groups of transformations.
+\section{\numb section 5. Fields, functions and variational formulations}
 
 
-\paragraph{\numb section 5.\numb parag 1.
-\special{ps: gsave 0.6 setgray}A one-dimensional circle\special{ps: grestore}}
+\paragraph{\numb section 5.\numb parag 1. Fields and functions}
 
-{\bf The code described in this paragraph does not work yet.
-It should be regarded as a mere declaration of intentions.}
-
-Here is the closed curve $ \RR/\ZZ $.
-We define it as a segment from {\codett A} to {\codett A}, with a specified {\codett jump}.
+As the reader may have already noticed, all examples in {\maniFEM} begin by declaring a
+Euclidian {\codett Manifold} and then go on by building a coordinate system :
 
 \verbatim
-   // begin with the one-dimensional line
-   Manifold RR ( tag::Euclid, tag::of_dim, 1 );
-   Function x = RR.build_coordinate_system ( tag::Lagrange, tag::of_degree, 1 );
-
-   // define an action on RR2 (a translation)
-   Manifold::Action g;  g(x) = x+1;
-   Manifold circle = RR.quotient ( g );
-
-   // one vertex is enough to start the process
-   Cell A ( tag::vertex );  x(A) = 0.02;
-   // with this vertex, we build a segment
-   Mesh seg ( tag::segment, A.reverse(), A, tag::divided_in, 10, tag::jump, g );
-\endverbatim
-
-We do not bother with the graphical representation of this one-dimensional mesh.
-
-
-\paragraph{\numb section 5.\numb parag 2.
-\special{ps: gsave 0.6 setgray}A flat torus\special{ps: grestore}}
-
-{\bf The code described in this paragraph does not work yet.
-It should be regarded as a mere declaration of intentions.}
-
-Here is the classical example of $ \RR^2/\ZZ^2 $.
-
-\verbatim
-   // begin with the usual two-dimensional space
    Manifold RR2 ( tag::Euclid, tag::of_dim, 2 );
    Function xy = RR2.build_coordinate_system ( tag::Lagrange, tag::of_degree, 1 );
-   Function x = xy[0], y = xy[1];
-
-   // define two actions on RR2 (translations)
-   Manifold::Action g1, g2;
-   g1(x,y) = (x+1) && y;
-   g2(x,y) = x && (y+1);
-   Manifold torus_manif = RR2.quotient ( g1, g2 );
-
-   // one vertex is enough to start the process
-   Cell A ( tag::vertex );  x(A) = 0.02;  y(A) = 0.02;
-   // with this vertex, we build two segments
-   Mesh seg_horiz ( tag::segment, A.reverse(), A,
-                    tag::divided_in, 10, tag::jump, g1 );
-   Mesh seg_vert  ( tag::segment, A.reverse(), A,
-                    tag::divided_in, 10, tag::jump, g2 );
-   // and a rectangle
-   Mesh torus ( tag::rectangle, seg_horiz, seg_vert,
-                seg_horiz.reverse(), seg_vert.reverse() );
-
-   // it would be meaningless to export 'square' as a msh file
-   // we can however export an unfolded mesh :
-   torus.unfold(-0.5,-0.2,0.5,0.2).export_msh ("unfolded-torus.msh");
+   Function x = xy[0],  y = xy[1];
 \endverbatim
 
-We have added a shadow representing the periodicity cell $ [0,1]^2 $.
-This gives a hint about the segments being repeated by the unfolding.
+See paragraph \numb section 10.\numb parag 2 for more details about tags.
 
+In the above, {\codett xy} is a {\codett Function}, a vector field actually, with two components,
+{\codett x} and {\codett y}.
+The declaration of {\codett xy} starts a complex process; under the curtains {\maniFEM} declares
+a {\codett Field} object associated to {\codett xy}.
+The {\codett Field} object changes the behaviour of {\maniFEM} in what regards initialization of
+{\codett Cell}s.
+Since {\codett xy} is of type Lagrange of degree 1, each newly built vertex {\codett Cell}
+will have memory space reserved for two {\codett double} precision numbers.
+If {\codett A} is a vertex {\codett Cell}, an assignment like {\codett x(A) = 1.5}
+sets the value of the {\codett x} component of the {\codett Field} associated to {\codett xy}
+at {\codett A}.
 
-\paragraph{\numb section 5.\numb parag 3.
-\special{ps: gsave 0.6 setgray}A skew flat torus\special{ps: grestore}}
+If we declare {\codett xy} to be of type Lagrange of degree 2, not only future vertices will
+have space reserved for two {\codett double}s, but also future segments.
+So, we may assign the value of {\codett y} at the middle of segment {\codett AB} by using
+the syntax {\codett y(AB) = 0.75}.
 
-{\bf The code described in this paragraph does not work yet.
-It should be regarded as a mere declaration of intentions.}
-
-We can build a skew torus by simply choosing other actions on {\codett RR2}.
+{\codett Function} objects allow for arithmetic expressions like in
 
 \verbatim
-   Manifold::Action g1, g2;
-   g1(x,y) = (x+1)   && (y+0.1);
-   g2(x,y) = (x+0.1) && (y+1);
-   Manifold torus_manif = RR2.quotient ( g1, g2 );
+   Function norm = power ( x*x + y*y, 0.5 );
 \endverbatim
 
-Again, we have added a shadow representing the periodicity cell, this time a parallelogram.
-
-
-\paragraph{\numb section 5.\numb parag 4.
-\special{ps: gsave 0.6 setgray}A curved circle\special{ps: grestore}}
-
-{\bf The code described in this paragraph does not work yet.
-It should be regarded as a mere declaration of intentions.}
-
-We are now in a position to resume the example in paragraph \numb section 2.\numb parag 14,
-this time in a less cumbersome manner.
+The {\codett deriv} method performs symbolic differentiation :
 
 \verbatim
-   Manifold RR ( tag::Euclid, tag::of_dim, 1 );
-   Function theta = RR.build_coordinate_system ( tag::Lagrange, tag::of_degree, 1 );
-   const double pi = 3.1415926536;
-   Manifold::Action g;  g(theta) = theta + 2*pi;
-   Manifold circle = RR.quotient ( g );
-
-   Cell A ( tag::vertex );  theta(A) = 0.;
-   Mesh seg ( tag::segment, A.reverse(), A, tag::divided_in, 10, tag::jump, g );
-
-   // define new coordinates x and y as arithmetic expressions of theta
-   Function x = cos(theta), y = sin(theta);
-   // forget about theta; in future statements, x and y will be used
-   circle.set_coordinates ( x && y );
-   seg.export_msh ("circle.msh");
+   Function norm_x = norm.deriv ( x );
+   Function norm_y = norm.deriv ( y );
 \endverbatim
 
+Functions can also be integrated, see section \numb section 6.
 
-\paragraph{\numb section 5.\numb parag 5.
-\special{ps: gsave 0.6 setgray}A cylinder\special{ps: grestore}}
 
-{\bf The code described in this paragraph does not work yet.
-It should be regarded as a mere declaration of intentions.}
+\paragraph{\numb section 5.\numb parag 2. \special{ps: gsave 0.6 setgray}Fields and functions\special{ps: grestore} [outdated]}
 
-Here is how to build a cylinder in $ \RR^3 $ :
+{\bf The code described in this paragraph is outdated and does not work.}
+
+Consider the mesh built by the code below.
 
 \verbatim
-   Manifold RR2 ( tag::Euclid, tag::of_dim, 2 );
-   Function theta_z =
-      RR2.build_coordinate_system ( tag::Lagrange, tag::of_degree, 1 );
-   Function theta = theta_z[0], z = theta_z[1];
-   const double pi = 3.1415926536;
-   Manifold::Action g;  g( theta, z ) = (theta+2*pi) && z;
-   Manifold cylinder_manif = RR2.quotient ( g );
-
-   Cell A ( tag::vertex );  theta(A) = 0.; z(A) = -1.;
-   Cell B ( tag::vertex );  theta(B) = 0.; z(B) =  1.;
-   Mesh AA ( tag::segment, A.reverse(), A, tag::divided_in, 10, tag::jump,  g );
-   Mesh AB ( tag::segment, A.reverse(), B, tag::divided_in, 10 );  // no jump
-   Mesh BB ( tag::segment, B.reverse(), B, tag::divided_in, 10, tag::jump, -g );
-   Mesh cylinder ( tag::rectangle, AA, AB, BB, AB.reverse() );
-
-   // define new coordinates x and y as arithmetic expressions of theta
-   Function x = cos(theta), y = sin(theta);
-   // forget about theta; in future statements, x, y and z will be used
-   cylinder_manif.set_coordinates ( x && y & z );
-   cylinder.export_msh ("circle.msh");
+   Mesh::intended_dimension = 2; // topological dimension
+   Mesh::initialize();
+   auto & xy = NumericField::multi_dim ("size", 2, "lives on", "points");	
+   auto & x = xy[0], & y = xy[1];
+   auto & u = NumericField::one_dim ("lives on", "points");
+   auto SW = Cell::point ("SW"); x(SW) = -1.1; y(SW) = 0.3;
+   auto SE = Cell::point ("SE"); x(SE) = 1; y(SE) = 0;
+   auto NE = Cell::point ("NE"); x(NE) = 1; y(NE) = 1;
+   auto NW = Cell::point ("NW"); x(NW) = -1; y(NW) = 1;
+   auto south ( tag::segment, SW.reverse(), SE, tag::divided_in, 4, xy );
+   auto east  ( tag::segment, SE.reverse(), NE, tag::divided_in, 2, xy );
+   auto north ( tag::segment, NE.reverse(), NW, tag::divided_in, 4, xy );
+   auto west  ( tag::segment, NW.reverse(), SW, tag::divided_in, 2, xy );
+   auto rect_mesh ( tag::rectangle, south, east, north, west, xy );
 \endverbatim
 
+Note that, besides the {\codett NumericField} objects {\codett x} and {\codett y}
+which we have already encountered in paragraph \numb section 1.\numb parag 1,
+we introduce another {\codett NumericField}, {\codett u}, which is meant to hold
+the values of the solution of some PDE.
 
-\paragraph{\numb section 5.\numb parag 6.
-\special{ps: gsave 0.6 setgray}A curved torus\special{ps: grestore}}
-
-{\bf The code described in this paragraph does not work yet.
-It should be regarded as a mere declaration of intentions.}
-
-We are now in a position to resume the example in paragraph \numb section 2.\numb parag 15,
-this time by using the quotient manifold $ \RR^2/\ZZ^2 $ introduced in paragraph
-\numb section 5.\numb parag 2.
+We now declare two functions defined on the mesh, linked to the two fields {\codett x} and
+{\codett y}.
+We can declare each function individually, as we did in paragraph \numb section 1.\numb parag 1,
+or we can declare the pair and then extract each component :
 
 \verbatim
-   Manifold RR2 ( tag::Euclid, tag::of_dim, 2 );
-   Function ab = RR2.build_coordinate_system ( tag::Lagrange, tag::of_degree, 1 );
-   Function alpha = ab[0], beta = ab[1];
-   const double pi = 3.1415926536;
-   Manifold::Action g1, g2;
-   g1(alpha,beta) = (alpha+2.*pi) && beta;
-   g2(alpha,beta) = alpha && (beta+2.*pi);
-   Manifold torus_manif = RR2.quotient ( g1, g2 );
+   auto & xxyy = FunctionOnMesh::from_field ( xy, "Lagrange degree one" );
+   auto & xx = xxyy[0], & yy = xxyy[1];
+\endverbatim
 
-   Cell A ( tag::vertex );  alpha(A) = 0.;  beta(A) = 0.;
-   Mesh seg_horiz ( tag::segment, A.reverse(), A,
-                    tag::divided_in, 10, tag::jump, g1 );
-   Mesh seg_vert  ( tag::segment, A.reverse(), A,
-                    tag::divided_in, 10, tag::jump, g2 );
-   Mesh torus ( tag::rectangle, seg_horiz, seg_vert,
-                seg_horiz.reverse(), seg_vert.reverse() );
+These functions are described as {\codett "Lagrange degree one"}, which means that they vary
+linearly along segments and also inside triangles.
+On quadrilaterals, they are polynomials of degree one, meaning they have a linear part plus
+a bi-linear one.
 
-   // parametrize the donut
-   const double big_radius = 3., small_radius = 1.;
-   // define x, y and z as functions of alpha and beta
-   Function x = ( big_radius + small_radius*cos(beta) ) * cos(alpha),
-            y = ( big_radius + small_radius*cos(beta) ) * sin(alpha),
-            z = small_radius*sin(beta);
+We can also declare an unknown function and a test function, to be used in a future variational
+problem :
 
-   // forget about alpha and beta :
-   torus.set_coordinates ( x && y && z );
-   // in future statements (e.g. for graphical representation)
-   // x, y and z will be used, not alpha nor beta :
-   torus.export_msh ("torus.msh");
+\verbatim
+   auto & uu = FunctionOnMesh::unknown ( u, "Lagrange degree one");
+   auto & w = FunctionOnMesh::test ( uu );
+\endverbatim
 
+The unknown {\codett uu} is related to the {\codett NumericField} previously declared,
+{\codett u}, which provides space to hold, at each vertex of the mesh, a real value.
+Hopefully, at the end of the day these will be the values of the solution of our PDE.
+The test function does not need to hold any values.
+The test function is an abstract object whose only use is to express the
+variational formulation.
+
+{\codett FunctionOnMesh} objects obey to usual arithmetic rules.
+For instance, {\codett (xx+yy*w)/uu} is a valid expression in \maniFEM.
+They can also be differentiated, like in {\codett (xx*yy).deriv(xx)}.
+Note that this expression will be evaluated right away, producing the result
+{\codett yy}, while expressions involving an unknown function or a test function
+will produce a delayed derivative object, to be evaluated later.
+Thus, {\codett w.deriv(xx)} will be evaluated only after replacing the test function
+{\codett w} by some function in a base of a discretized Hilbert space.
+
+{\codett FunctionOnMesh} objects can also be integrated through their method
+{\codett integrate}, which produces a delayed integral expression.
+The integral is not evaluated right away, but only later, with the use of an
+{\codett Integrator} object (which could be a Gauss quadrature).
+
+Integral expressions are stored as objects belonging to the class\hfil\break
+{\codett FunctionOnMesh::combinIntegrals}.
+These objects can be equated by using their\hfil\break
+{\codett operator==}, which returns a {VariationalProblem} object.
+Thus, the operator\hfil\break
+{\codett FunctionOnMesh::combinIntegrals::operator==} acts as a factory function
+for\hfil\break {\codett VariationalProblem} objects.
+For instance, {\codett x.integrate(rect\_mesh) == y.integrate(south)} is a syntactically valid
+expression which would produce a {\codett VariationalProblem} but actually
+gives a run-time error because the {\codett operator==} checks that the right hand side
+of the variational problem actually contains a function declared as uknown and one
+declared as test, and that the left hand side contains a test function but no unknown.
+Here is a more meaningful example :
+
+\verbatim
+   auto & var_pb =
+       ( uu.deriv(xx)*w.deriv(xx) + uu.deriv(yy)*w.deriv(yy) ) .integrate(rect_mesh)
+       == w.integrate(rect_mesh) + w.integrate(south);
+\endverbatim
+
+Note how we can mix integrals on different domains; recall that {\codett south} is
+a side of {\codett rect\_mesh}.
+
+Dirichlet-type boundary conditions are implemented through the directive
+{\codett prescribe\_on} followed by one or more equalities.
+
+\verbatim
+   var_pb.prescribe_on (north);  uu == 0.;          w == 0.;
+   var_pb.prescribe_on (east);   uu == xx*(1.-yy);  w == 0.;
+   var_pb.prescribe_on (west);   uu == 0.;          w == 0.;
 \endverbatim
