--- a/misc/manual-cap-06.tex
+++ b/misc/manual-cap-06.tex
@@ -1,152 +1,206 @@
-\section{\numb section 6. Fields, functions and variational formulations}
+\section{\numb section 6. Finite elements and integrators}
 
 
-\paragraph{\numb section 6.\numb parag 1. Fields and functions}
+Finite elments are still incipient in \maniFEM.
+Paragraph \numb section 6.\numb parag 1 discusses the concept of finite element
+and paragraph \numb section 6.\numb parag 2 gives an example of rudimentary use.
+There is a lot of ongoing work on this subject.
 
-As the reader may have already noticed, all examples in {\maniFEM} begin by declaring a
-Euclidian {\codett Manifold} and then go on by building a coordinate system :
+
+\paragraph{\numb section 6.\numb parag 1. Finite elements}
+
+The notion of a finite element is quite complex.
+The purpose of a {\codett FiniteElement} is to build a list of functions, say, $ \psi $,
+defined on our mesh.
+The linear span of these functions will be a discretized Hilbert space.
+It is the {\codett FiniteElement}'s job to replace, in the variational formulation,
+the unknown function by one $ \psi $, the test function by another $ \psi $ and,
+by evaluating the integrals, obtain the coefficients of a system of linear equations.
+Some external solver will then solve the system, and it is the job of the finite element
+to transform back the vector produced by the solver into a function defined on our mesh.
+
+Computing each integral is a somewhat separate process; it's the job of an {\codett Integrator}
+which could be a Gauss quadrature or some other procedure like symbolic integration.
+When a Gauss quadrature is used, the separation between a {\codett FiniteElement}'s job
+and the {\codett Itegrator}'s job is not very sharp because often the Gauss quadrature is
+perfomed not on the physical cell but rather on a master element which is built and
+handled by the {\codett FiniteElement}.
+The authors of {\maniFEM} have tried to separate these two concepts
+as much as possible, especially because some users may want to use a {\codett FiniteElement}
+with no master element, or an {\codett Integrator} acting directly on the physical cell.
+
+Thus, there is a base class {\codett FiniteElement} and a derived class
+{\codett FiniteElement::withMaster} which keeps, as an extra attribute, the map transforming
+the master element to the current physical cell.
+This map depends of course on the geometry of the cell and thus it must be computed from
+scratch each time we begin integrating on a new cell.
+We say that the {\codett FiniteElement} is docked on a new {\codett Cell};
+the method {\codett dock\_on} performs this operation.
+This method is element-specific, each type of finite element having its own class.
+
+For instance, the class {\codett FiniteElement::Lagrange\_Q1} is a class derived from
+\hfil\break{\codett FiniteElement::withMaster}.
+It will only {\codett dock\_on} quadrilaterals (two-dimensional {\codett Cell}s
+with four sides).
+% Recall that in {\maniFEM} the vertices do not have necessarily any number attached.
+% When we create a {\codett FiniteElement::Lagrange\_Q1} object, it will enumerate vertices
+% of the mesh if a mesh exists already, and it will prepare the ground for vertices created
+% in the future to be enumerated, too.
+% This enumeration is useful to identify a vector of real numbers with the values
+% (at each vertex) of a function defined on the mesh.
+When docking on a cell, the {\codett FiniteElement::Lagrange\_Q1} object will build four
+``shape functions'' and a transformation map (a diffeomorphism between a master element
+occuppying the square $ [-1, 1]^2 $ and the current cell).
+It will also build the jacobian of this transformation map.
+The four shape functions can be accessed through the method {\codett basis\_function},
+as shown in paragraph \numb section 6.\numb parag 2.
+
+
+\paragraph{\numb section 6.\numb parag 2. A rudimentary example}
+
+Let's look at an example about the Laplace operator with non-homogeneous Dirichlet
+boundary conditions.
+
+It should be stressed that the approach presented in this paragraph is rather low-level.
+We are working hard to make {\maniFEM} understand statements describing variational
+formulations given as {\tt C++} objects.
+When this part of the code is done, the programming style will become much more elegant
+and compact.
+
+Note also that this example makes use of the {\codett Eigen} library.
+Because of this, the compilation process will produce a lot of warnings,
+unless you remove the {\codett -W} options from the compilation command in your
+{\codett Makefile}.
 
 \verbatim
    Manifold RR2 ( tag::Euclid, tag::of_dim, 2 );
    Function xy = RR2.build_coordinate_system ( tag::Lagrange, tag::of_degree, 1 );
    Function x = xy[0],  y = xy[1];
+
+   // build a 10x12 mesh on a square domain
+   Cell A ( tag::vertex );  x(A) = 0.;   y(A) = 0.;
+   Cell B ( tag::vertex );  x(B) = 1.;   y(B) = 0.;
+   Cell C ( tag::vertex );  x(C) = 1.;   y(C) = 1.;
+   Cell D ( tag::vertex );  x(D) = 0.;   y(D) = 1.;
+   Mesh AB ( tag::segment, A.reverse(), B, tag::divided_in, 10 );
+   Mesh BC ( tag::segment, B.reverse(), C, tag::divided_in, 12 );
+   Mesh CD ( tag::segment, C.reverse(), D, tag::divided_in, 10 );
+   Mesh DA ( tag::segment, D.reverse(), A, tag::divided_in, 12 );
+   Mesh ABCD ( tag::rectangle, AB, BC, CD, DA );
+
+   // declare the type of finite element
+   FiniteElement fe
+      ( tag::with_master, tag::quadrangle, tag::Lagrange, tag::of_degree, 1 );
+   Integrator integ = fe.set_integrator ( tag::Gauss, tag::quad_4 );
 \endverbatim
 
-See paragraph \numb section 9.\numb parag 2 for more details about tags.
-
-In the above, {\codett xy} is a {\codett Function}, a vector field actually, with two components,
-{\codett x} and {\codett y}.
-The declaration of {\codett xy} starts a complex process; under the curtains {\maniFEM} declares
-a {\codett Field} object associated to {\codett xy}.
-The {\codett Field} object changes the behaviour of {\maniFEM} in what regards initialization of
-{\codett Cell}s.
-Since {\codett xy} is of type Lagrange of degree 1, each newly built vertex {\codett Cell}
-will have memory space reserved for two {\codett double} precision numbers.
-If {\codett A} is a vertex {\codett Cell}, an assignment like {\codett x(A) = 1.5}
-sets the value of the {\codett x} component of the {\codett Field} associated to {\codett xy}
-at {\codett A}.
-
-If we declare {\codett xy} to be of type Lagrange of degree 2, not only future vertices will
-have space reserved for two {\codett double}s, but also future segments.
-So, we may assign the value of {\codett y} at the middle of segment {\codett AB} by using
-the syntax {\codett y(AB) = 0.75}.
-
-{\codett Function} objects allow for arithmetic expressions like in
+Vertices are not numbered. In the future, a more elegant solution for automatic numbering
+of vertices will be implemented; for now, we build a map {\codett numbering} (see the source
+code in file {\codett main-\numb section 6.\numb parag 2.cpp} in the distribution tree),
+to be used as shown below.
+The matrix of the linear system and the vector holding the free coefficients
+are declared as objects of the {\codett Eigen} library.
 
 \verbatim
-   Function norm = power ( x*x + y*y, 0.5 );
+   size_t size_matrix = ABCD.number_of ( tag::vertices );
+   assert ( size_matrix == numbering.size() );
+   Eigen::SparseMatrix <double> matrix_A ( size_matrix, size_matrix );
+   Eigen::VectorXd vector_b ( size_matrix );  vector_b.setZero();
 \endverbatim
 
-The {\codett deriv} method performs symbolic differentiation :
+We now run over all rectangular cells of {\codett ABCD}, dock the finite element
+on the current cell,
+compute integrals of the form $ \displaystyle \int\!\!\!\int {\partial \psi_i \over
+\partial x_\alpha} {\partial \psi_j \over \partial x_\beta} dx $ and add the obtained
+values to the global matrix:
 
 \verbatim
-   Function norm_x = norm.deriv ( x );
-   Function norm_y = norm.deriv ( y );
+   // run over all square cells composing ABCD
+   CellIterator it = ABCD.iterator ( tag::over_cells_of_dim, 2 );
+   for ( it.reset(); it.in_range(); it++ )
+   {  Cell small_square = *it;
+      fe.dock_on ( small_square );
+      // run twice over the four vertices of 'small_square'
+      CellIterator it1 = small_square.boundary().iterator ( tag::over_vertices );
+      CellIterator it2 = small_square.boundary().iterator ( tag::over_vertices );
+      for ( it1.reset(); it1.in_range(); it1++ )
+      for ( it2.reset(); it2.in_range(); it2++ )
+      {  Cell V = *it1, W = *it2;
+         // V may be the same as W, no problem about that
+         Function psiV = fe.basis_function(V),
+                  psiW = fe.basis_function(W),
+                  d_psiV_dx = psiV.deriv(x),
+                  d_psiV_dy = psiV.deriv(y),
+                  d_psiW_dx = psiW.deriv(x),
+                  d_psiW_dy = psiW.deriv(y);
 \endverbatim
-
-Functions can also be integrated, see section \numb section 7.
-
-
-\paragraph{\numb section 6.\numb parag 2. \special{ps: gsave 0.6 setgray}Fields and functions\special{ps: grestore} [outdated]}
-
-{\bf The code described in this paragraph is outdated and does not work.}
-
-Consider the mesh built by the code below.
 
 \verbatim
-   Mesh::intended_dimension = 2; // topological dimension
-   Mesh::initialize();
-   auto & xy = NumericField::multi_dim ("size", 2, "lives on", "points");	
-   auto & x = xy[0], & y = xy[1];
-   auto & u = NumericField::one_dim ("lives on", "points");
-   auto SW = Cell::point ("SW"); x(SW) = -1.1; y(SW) = 0.3;
-   auto SE = Cell::point ("SE"); x(SE) = 1; y(SE) = 0;
-   auto NE = Cell::point ("NE"); x(NE) = 1; y(NE) = 1;
-   auto NW = Cell::point ("NW"); x(NW) = -1; y(NW) = 1;
-   auto south ( tag::segment, SW.reverse(), SE, tag::divided_in, 4, xy );
-   auto east  ( tag::segment, SE.reverse(), NE, tag::divided_in, 2, xy );
-   auto north ( tag::segment, NE.reverse(), NW, tag::divided_in, 4, xy );
-   auto west  ( tag::segment, NW.reverse(), SW, tag::divided_in, 2, xy );
-   auto rect_mesh ( tag::rectangle, south, east, north, west, xy );
+         // 'fe' is already docked on 'small_square'
+         // so this will be the domain of integration
+         matrix_A.coeffRef ( numbering[V.core]-1, numbering[W.core]-1 ) +=
+            fe.integrate ( d_psiV_dx * d_psiW_dx + d_psiV_dy * d_psiW_dy );      }  }
 \endverbatim
 
-Note that, besides the {\codett NumericField} objects {\codett x} and {\codett y}
-which we have already encountered in paragraph \numb section 1.\numb parag 1,
-we introduce another {\codett NumericField}, {\codett u}, which is meant to hold
-the values of the solution of some PDE.
+In the above, {\codett coeffRef} is the method used by {\codett Eigen} to access elements of
+a sparse matrix.
 
-We now declare two functions defined on the mesh, linked to the two fields {\codett x} and
-{\codett y}.
-We can declare each function individually, as we did in paragraph \numb section 1.\numb parag 1,
-or we can declare the pair and then extract each component :
+We impose Dirichlet boundary conditions $ u(x,y) = xy $ (this way, we know beforehand
+the exact solution will be $ u(x,y) = xy $).
+We use a function {\codett impose\_value\_of\_unknown} which changes the {\codett matrix\_A}
+and the {\codett vector\_b} in order to impose the Dirichlet condition {\codett u(i) = 
+some\_value}. See the source code in file {\codett main-\numb section 6.\numb parag 2.cpp}
+in the distribution tree for the definition of the {\codett impose\_value\_of\_unknown}
+function.
 
 \verbatim
-   auto & xxyy = FunctionOnMesh::from_field ( xy, "Lagrange degree one" );
-   auto & xx = xxyy[0], & yy = xxyy[1];
+   CellIterator it = BC.iterator ( tag::over_vertices );
+   for ( it.reset(); it.in_range(); it++ )
+   {   Cell P = *it;
+       size_t i = numbering[P.core]-1;
+       impose_value_of_unknown ( matrix_A, vector_b, i, y(P) );  }
 \endverbatim
 
-These functions are described as {\codett "Lagrange degree one"}, which means that they vary
-linearly along segments and also inside triangles.
-On quadrilaterals, they are polynomials of degree one, meaning they have a linear part plus
-a bi-linear one.
-
-We can also declare an unknown function and a test function, to be used in a future variational
-problem :
+We then use {\codett Eigen} to solve the system of linear equations :
 
 \verbatim
-   auto & uu = FunctionOnMesh::unknown ( u, "Lagrange degree one");
-   auto & w = FunctionOnMesh::test ( uu );
+   Eigen::ConjugateGradient < Eigen::SparseMatrix<double>,
+                              Eigen::Lower|Eigen::Upper    > cg;
+   cg.compute ( matrix_A );
+   Eigen::VectorXd u = cg.solve ( vector_b );
 \endverbatim
 
-The unknown {\codett uu} is related to the {\codett NumericField} previously declared,
-{\codett u}, which provides space to hold, at each vertex of the mesh, a real value.
-Hopefully, at the end of the day these will be the values of the solution of our PDE.
-The test function does not need to hold any values.
-The test function is an abstract object whose only use is to express the
-variational formulation.
+And obtain the expected solution :
 
-{\codett FunctionOnMesh} objects obey to usual arithmetic rules.
-For instance, {\codett (xx+yy*w)/uu} is a valid expression in \maniFEM.
-They can also be differentiated, like in {\codett (xx*yy).deriv(xx)}.
-Note that this expression will be evaluated right away, producing the result
-{\codett yy}, while expressions involving an unknown function or a test function
-will produce a delayed derivative object, to be evaluated later.
-Thus, {\codett w.deriv(xx)} will be evaluated only after replacing the test function
-{\codett w} by some function in a base of a discretized Hilbert space.
+\bigskip
+{ \psfrag{A}{\special{ps: gsave 0 0 0.8 setrgbcolor}{\codett A}\special{ps: grestore}}
+\psfrag{B}{\special{ps: gsave 0 0 0.8 setrgbcolor}{\codett B}\special{ps: grestore}}
+\psfrag{C}{\special{ps: gsave 0 0 0.8 setrgbcolor}{\codett C}\special{ps: grestore}}
+\psfrag{D}{\special{ps: gsave 0 0 0.8 setrgbcolor}{\codett D}\special{ps: grestore}}
+\centerline{\includegraphics[width=60mm]{square-Dirichlet.eps}} }
 
-{\codett FunctionOnMesh} objects can also be integrated through their method
-{\codett integrate}, which produces a delayed integral expression.
-The integral is not evaluated right away, but only later, with the use of an
-{\codett Integrator} object (which could be a Gauss quadrature).
+We stress again that this example shows a rather rudimentary way of using finite elements in
+\maniFEM.
+We are working hard to reach a more elegant, compact and high-level style.
+For instance, the numbering of vertices should be automated.
+Also, the user should have the possibility to declare the partial differential equation
+through a compact declaration of the corresponding variational formulation.
 
-Integral expressions are stored as objects belonging to the class\hfil\break
-{\codett FunctionOnMesh::combinIntegrals}.
-These objects can be equated by using their\hfil\break
-{\codett operator==}, which returns a {VariationalProblem} object.
-Thus, the operator\hfil\break
-{\codett FunctionOnMesh::combinIntegrals::operator==} acts as a factory function
-for\hfil\break {\codett VariationalProblem} objects.
-For instance, {\codett x.integrate(rect\_mesh) == y.integrate(south)} is a syntactically valid
-expression which would produce a {\codett VariationalProblem} but actually
-gives a run-time error because the {\codett operator==} checks that the right hand side
-of the variational problem actually contains a function declared as uknown and one
-declared as test, and that the left hand side contains a test function but no unknown.
-Here is a more meaningful example :
+Another limitation of {\maniFEM} is that, at present, finite element computations
+are rather slow.
+This is so because each docking operation implies a lot of symbolic calculations;
+the same happens when we differentiate and then integrate functions.
+There are three ways of circunventing this limitation.
+The first one is : if your mesh is made of identical finite elements
+(like the example in the present paragraph), you can compute the elementary matrix
+just once and then assembly the global matrix from it.
+It will surely be much faster.
+A second way to speed up the code is to add the option {\codett -dNDEBUG} to the compilation
+command in your {\codett Makefile} (see also paragraph \numb section 10.\numb parag 13).
+The third (and soundest) solution is a deep optimization of the {\maniFEM} library,
+object of on-going work.
+A significant part of the symbolic calculations should be done just once,
+when the finite element is declared.
+Only a small chunk of symbolic computation will be performed at docking and
+later, when we build the elementary matrix.
 
-\verbatim
-   auto & var_pb =
-       ( uu.deriv(xx)*w.deriv(xx) + uu.deriv(yy)*w.deriv(yy) ) .integrate(rect_mesh)
-       == w.integrate(rect_mesh) + w.integrate(south);
-\endverbatim
-
-Note how we can mix integrals on different domains; recall that {\codett south} is
-a side of {\codett rect\_mesh}.
-
-Dirichlet-type boundary conditions are implemented through the directive
-{\codett prescribe\_on} followed by one or more equalities.
-
-\verbatim
-   var_pb.prescribe_on (north);  uu == 0.;          w == 0.;
-   var_pb.prescribe_on (east);   uu == xx*(1.-yy);  w == 0.;
-   var_pb.prescribe_on (west);   uu == 0.;          w == 0.;
-\endverbatim
